[cs-ui] CSTab - Fixed collapsing tabs in safari by adding line-height: 1; to cs-tab-title

--- a/cs-ui-components/src/sass/components/_cs-tab.scss
+++ b/cs-ui-components/src/sass/components/_cs-tab.scss
@@ -33,8 +33,12 @@
 			outline: none;
 			@include sc(--cs-tab-c);
 
-			.cs-tab-title:not(:first-child) {
-				margin-left: 0.5rem;
+			.cs-tab-title {
+				line-height: 1;
+
+				&:not(:first-child) {
+					margin-left: 0.5rem;
+				}
 			}
 
 			&::after {
